--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,4 +1,4 @@
-#SignUp {
+#login {
   max-width: 500px;
   padding: 50px 0;
   margin: auto;
@@ -8,7 +8,7 @@
   >h1{
     text-align: center;
   }
-  >.signButton{
+  >.loginButton{
     width: 100%;
   }
 }
