--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,7 @@
 #index {
   max-width: 1000px;
   margin: 0 auto;
+  padding: 0 16px;
   >header{
     display: flex;
     justify-content: space-between;
