1. 完成组件 2.优化进度条 3.取消番茄

--- a/src/components/Tomatoes/TomatoAction.scss
+++ b/src/components/Tomatoes/TomatoAction.scss
@@ -2,6 +2,9 @@
   .countDownWrapper{
     position: relative;
   }
+  .inputWrapper{
+    position: relative
+  }
   .abort{
     position: absolute;
     right: -6px;
