--- a/src/components/Tomatoes/CountDown.scss
+++ b/src/components/Tomatoes/CountDown.scss
@@ -16,6 +16,6 @@
     left: 0;
     background:#e9e9e9;
     z-index: 0;
-    box-shadow: 2px 0 0 rgba(225,225,225,.5);
+    box-shadow: 2px 0 0 rgba(225,225,225,1);
   }
 }
