--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
-body {
+*{
   margin: 0;
   padding: 0;
+}
+body {
   font-family: sans-serif;
   background: #fdfdfd;
+}
+li{
+  list-style: none;
 }
