--- a/src/components/Statistics/Statistics.scss
+++ b/src/components/Statistics/Statistics.scss
@@ -38,6 +38,14 @@
         left: 0;
         right: 0;
       }
+      .chart{
+        width: 100%;
+        height: 60px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
     }
     .active{
       background-color: #f4f4f4;
