--- a/src/components/Tomatoes/TomatoAction.scss
+++ b/src/components/Tomatoes/TomatoAction.scss
@@ -1,14 +1,14 @@
-#TomatoAction{
-  .countDownWrapper{
+#TomatoAction {
+  .countDownWrapper {
     position: relative;
   }
-  .inputWrapper{
-    position: relative
+  .inputWrapper {
+    position: relative;
   }
-  .startTomatoBtn{
+  .startTomatoBtn {
     width: 100%;
   }
-  .abort{
+  .abort {
     position: absolute;
     right: -6px;
     top: -6px;
