--- a/src/components/Tomatoes/Tomatoes.scss
+++ b/src/components/Tomatoes/Tomatoes.scss
@@ -1,9 +1,8 @@
-#tomatoes{
+#tomatoes {
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 4px;
   width: calc(50% - 8px);
-  box-shadow: 0 2px 0 rgba(225, 225, 225, .2);
+  box-shadow: 0 2px 0 rgba(225, 225, 225, 0.2);
   background: white;
-  
 }
