--- a/src/components/Todos/TodoItem.scss
+++ b/src/components/Todos/TodoItem.scss
@@ -1,41 +1,42 @@
-#todoItem{
+#todoItem {
   display: flex;
   padding: 8px 0 8px 8px;
   align-items: center;
   border-bottom: 1px solid #ddd;
-  &:first-child{
+  &:first-child {
     border-top: 1px solid #ddd;
   }
-  &:hover{
+  &:hover {
     background: #f9f9f9;
   }
-  &.editing{
+  &.editing {
     background: #fff3d2;
   }
-  &.completed{
-    >.text{
+  &.completed {
+    > .text {
       text-decoration: line-through;
       color: #a9a9a9;
     }
   }
-  >.editing, >.text{
+  > .editing,
+  > .text {
     flex: 1;
   }
-  >.editing{
+  > .editing {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 8px;
-    >input{
+    > input {
       border: 0;
       outline: none;
       padding: 0;
       background: transparent;
     }
   }
-  >.editing>.iconWrapper>.anticon{
-      margin-left: 4px;
-      color: #a9a9a9;
-      cursor: pointer;
+  > .editing > .iconWrapper > .anticon {
+    margin-left: 4px;
+    color: #a9a9a9;
+    cursor: pointer;
   }
 }
