--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -1,11 +1,11 @@
-#todos{
+#todos {
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 4px;
   width: calc(50% - 8px);
-  box-shadow: 0 2px 0 rgba(225, 225, 225, .2);
+  box-shadow: 0 2px 0 rgba(225, 225, 225, 0.2);
   background: white;
-  >.todoList{
+  > .todoList {
     margin-top: 16px;
   }
 }
